# Unix-sniffer

./: Cargo.toml  README.md
test-programs/: scm_cred_client.py  scm_cred_print.py
unix-sniffer/: Cargo.toml  build.rs
unix-sniffer-common/: Cargo.toml  build.rs
unix-sniffer-common/src/: buffer.rs  co_re.rs  errors.rs  events.rs  lib.rs  macros.rs  utils.rs  version.rs
unix-sniffer-common/src/alloc/: bpf.rs
unix-sniffer-common/src/buffer/: bpf.rs  user.rs
unix-sniffer-common/src/co_re/: gen.rs  unix_sock_core.rs
unix-sniffer-common/src/co_re/c-bindings/: shim.c
unix-sniffer-common/src/events/: bpf.rs  user.rs
unix-sniffer-common/src/version/: bpf.rs
unix-sniffer-ebpf/: Cargo.toml  build.rs  rust-toolchain.toml
unix-sniffer-ebpf/src/: main.rs  maps.rs  scm_fd_tracker.rs
unix-sniffer/src/: main.rs  watcher.rs
